--- a/sikdai-ho-pasa/Vanila/css-practice/index.html
+++ b/sikdai-ho-pasa/Vanila/css-practice/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,16 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- <div class="container">
-        <div class="main"></div>
-        <div class="main-1"></div>
-    </div> -->
     <div class="flexbox">
-        <div class="car1"></div>
-    <div class="car2"></div>
-    <div class="car3"></div>
+        <div class="car car1"></div>
+        <div class="car car2"></div>
+        <div class="car car3"></div>
+        <div class="car car3"></div>
+        <div class="car car3"></div>
+        <div class="car car3"></div>
+        <div class="car car3"></div>
+        <div class="car car3"></div>
     </div>
-    
-    
 </body>
 </html>
