--- a/web-dev-projects/vanila/project-1/index.html
+++ b/web-dev-projects/vanila/project-1/index.html
@@ -35,7 +35,24 @@
         <img id="img-2" src="https://images.unsplash.com/photo-1541702633985-fd307901baff?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
         <img id="img-3" src="https://images.unsplash.com/photo-1567225477277-c8162eb4991d?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
         <img id="img-4" src="https://images.unsplash.com/photo-1543487945-139a97f387d5?q=80&w=1580&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
-        <h5 id="btn-left">Your Smile, Your Passion</h5>
     </div>
+    <!-- Bottom Section -->
+         <!-- Bottom Left Text -->
+         <div id="bottom-section">
+        <h5 id="btm-left">Your Smile, Your Passion</h5>
+        <div class="circle"> 
+            <i class="ri-arrow-down-line"></i>
+        </div>
+        <!-- Bottom Right Text -->
+        <div id="icon-box">
+            <div id="icon">
+                <i class="ri-facebook-circle-fill"></i>
+                <i class="ri-youtube-fill"></i>
+                <i class="ri-twitter-x-fill"></i>
+            </div>
+            <h5 id="btm-right">Your Smile, Your Passion</h5>
+        </div>
+    </div>
+   
 </body>
 </html>
